--- a/src/view/frontend/templates/html/header/header-container-block.phtml
+++ b/src/view/frontend/templates/html/header/header-container-block.phtml
@@ -1,12 +1,16 @@
 <?php
 /** @var $block \Magento\Framework\View\Element\Template */
 // Header is sticky up to medium
-$stickyClass = 'sticky top-0 lg:relative lg:top-auto border-b lg:border-none drop-shadow-sm lg:drop-shadow-none';
+$class = 'sticky top-0 lg:relative lg:top-auto';
+
+if ($additionalClasses = $block->getClass()) {
+    $class .= ' ' . $additionalClasses;
+}
 
 // Header is sticky in desktop view as well
-//$stickyClass = 'sticky top-0';
+//$class = 'sticky top-0';
 ?>
-<div x-data="stickyHeader()" class="z-50 transition ease-in-out transform-gpu lg:translate-y-0 <?= $stickyClass ?>" :class="isHidden ? '-translate-y-full' : 'translate-y-0'" @scroll.window.debounce="scroll">
+<div x-data="stickyHeader()" class="z-50 transition ease-in-out transform-gpu lg:translate-y-0 <?= $class ?>" :class="isHidden ? '-translate-y-full' : 'translate-y-0'" @scroll.window.debounce="scroll">
 <?= $block->getChildHtml() ?>
 </div>
 <script>
