--- a/src/view/frontend/layout/hyva_header.xml
+++ b/src/view/frontend/layout/hyva_header.xml
@@ -10,7 +10,7 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <!-- Enable sticky header -->
-    <update handle="sticky_header"/>
+    <!--update handle="sticky_header"/-->
     <body>
         <referenceBlock name="header-content" remove="true" />
 
